feat: Add EE405 Portfolio link to navigation and display remote sensing image in project section.

--- a/week1.html
+++ b/week1.html
@@ -41,6 +41,8 @@
             <li><a class="nav-link" href="week13.html">Week 13</a></li>
           </ul>
         </li>
+        <li><a class="nav-link" href="https://nichula01.github.io/EE405_E_20_425/" target="_blank">EE405 Portfolio</a>
+        </li>
         <li><a class="nav-link" href="index.html#contact">Contact</a></li>
       </ul>
     </div>
