--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
             <li><a class="nav-link" href="week13.html">Week 13</a></li>
           </ul>
         </li>
+        <li><a class="nav-link" href="https://nichula01.github.io/EE405_E_20_425/" target="_blank">EE405 Portfolio</a>
+        </li>
         <li><a class="nav-link" href="index.html#contact">Contact</a></li>
       </ul>
     </div>
@@ -146,9 +148,8 @@
             </ul>
           </article>
           <div class="project-media reveal">
-            <div class="media-frame" role="img" aria-label="Placeholder remote sensing imagery">
-              <span>Remote sensing imagery placeholder</span>
-            </div>
+            <img src="assets/remote_sensing.png" alt="Remote sensing analysis visualization"
+              style="width: 100%; height: auto; border-radius: var(--radius-lg); border: 1px solid var(--border);">
           </div>
         </div>
       </div>
