--- a/week3.html
+++ b/week3.html
@@ -55,31 +55,140 @@
           </p>
         </header>
 
-        <section class="week-grid">
-          <article class="card reveal">
-            <h2>Objectives</h2>
-            <p>Placeholder text describing the goals for Week 3.</p>
-          </article>
+        <section class="section section-light" id="week3-summary">
+          <div class="card reveal">
+            <h2>Expanded Sampling & Cloud-Free Vision</h2>
+            <p>
+              Week 3 doubled down on triplet collection by adding new sites along the Kelani River flood corridor,
+              Mahaweli River near Trincomalee, and Negombo Lagoon, while the backend focus shifted to cloud-removal
+              tooling for Sentinel-2 imagery. These new samples complement the Week 2 archive and set the stage for
+              multisite comparisons.
+            </p>
+          </div>
+        </section>
 
-          <article class="card reveal">
-            <h2>Work Done</h2>
-            <p>Placeholder text summarizing completed tasks and activities.</p>
-          </article>
+        <section class="section section-dark" id="triplet-grid">
+          <div class="triplet-table-wrapper reveal">
+            <h2 class="section-heading">Week 3 Sample Triplets</h2>
+            <p class="lead">
+              Each label row below names the target area, followed by before/on/after Sentinel-2 snapshots.
+              The imagery reuses the prior exports as placeholders while new collections are finalized.
+            </p>
+            <table class="triplet-table">
+              <thead>
+                <tr>
+                  <th>Before</th>
+                  <th>On</th>
+                  <th>After</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr class="triplet-label-row">
+                  <th colspan="3">Kelani River Flood-Prone Area</th>
+                </tr>
+                <tr>
+                  <td>
+                    <figure>
+                      <img src="assets/BEFORE_E425_01.png" alt="Kelani before">
+                      <figcaption>Before</figcaption>
+                    </figure>
+                  </td>
+                  <td>
+                    <figure>
+                      <img src="assets/ON_E425_01.png" alt="Kelani on">
+                      <figcaption>On</figcaption>
+                    </figure>
+                  </td>
+                  <td>
+                    <figure>
+                      <img src="assets/AFTER_E425_01.png" alt="Kelani after">
+                      <figcaption>After</figcaption>
+                    </figure>
+                  </td>
+                </tr>
+                <tr class="triplet-label-row">
+                  <th colspan="3">Mahaweli River near Trincomalee</th>
+                </tr>
+                <tr>
+                  <td>
+                    <figure>
+                      <img src="assets/BEFORE_E425_02.png" alt="Mahaweli before">
+                      <figcaption>Before</figcaption>
+                    </figure>
+                  </td>
+                  <td>
+                    <figure>
+                      <img src="assets/ON_E425_02.png" alt="Mahaweli on">
+                      <figcaption>On</figcaption>
+                    </figure>
+                  </td>
+                  <td>
+                    <figure>
+                      <img src="assets/AFTER_E425_02.png" alt="Mahaweli after">
+                      <figcaption>After</figcaption>
+                    </figure>
+                  </td>
+                </tr>
+                <tr class="triplet-label-row">
+                  <th colspan="3">Negombo Lagoon</th>
+                </tr>
+                <tr>
+                  <td>
+                    <figure>
+                      <img src="assets/BEFORE_E425_03.png" alt="Negombo before">
+                      <figcaption>Before</figcaption>
+                    </figure>
+                  </td>
+                  <td>
+                    <figure>
+                      <img src="assets/ON_E425_03.png" alt="Negombo on">
+                      <figcaption>On</figcaption>
+                    </figure>
+                  </td>
+                  <td>
+                    <figure>
+                      <img src="assets/AFTER_E425_03.png" alt="Negombo after">
+                      <figcaption>After</figcaption>
+                    </figure>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </section>
 
-          <article class="card reveal">
-            <h2>Tools / Methods Used</h2>
-            <p>Placeholder text listing software, datasets, or methodologies.</p>
-          </article>
-
-          <article class="card reveal">
-            <h2>Results / Observations</h2>
-            <p>Placeholder text highlighting findings or interim outputs.</p>
-          </article>
-
-          <article class="card reveal">
-            <h2>Next Week Plan</h2>
-            <p>Placeholder text outlining the plan for the next week.</p>
-          </article>
+        <section class="section section-light" id="cloud-removal">
+          <div class="card reveal">
+            <h2>Cloud Removal Environment</h2>
+            <p>
+              I reproduced the DSen2-CR setup (a deep residual neural network + SAR-optical fusion) to remove clouds from Sentinel-2 imagery.
+              The repository below is now part of the research toolbox and its PDF paper is embedded so the methodology stays readable.
+            </p>
+            <div class="repo-card">
+              <div>
+                <h3>DSen2-CR · ameraner/dsen2-cr</h3>
+                <p>
+                  Official implementation of the deep residual network that leverages SAR guidance with a cloud-adaptive loss, matching
+                  the globally-sampled training strategy described in the paper.
+                </p>
+              </div>
+              <a class="ghost-button" href="https://github.com/ameraner/dsen2-cr" target="_blank" rel="noopener">Visit Repository</a>
+            </div>
+            <ul class="detail-list" style="margin-top: 1.5rem;">
+              <li>Optical imagery is foundational across EO applications, yet consistent realizations are blocked by cloud cover.</li>
+              <li>DSen2-CR’s deep residual blocks allow reconstructing optical appearance even under optically thick clouds.</li>
+              <li>SAR-optical fusion adds geomorphic cues, while the cloud-adaptive loss keeps as much surface variability as possible.</li>
+              <li>The Big Data era in satellite sensing makes globally sampled deep learning feasible, matching the paper’s training regime.</li>
+            </ul>
+            <figure class="media-frame reveal" style="margin-top: 1.5rem;">
+              <object data="papers/cloud.pdf" type="application/pdf" width="100%" height="360">
+                <p>
+                  Cloud removal paper: <a href="papers/cloud.pdf" target="_blank" rel="noopener">Download cloud.pdf</a>
+                </p>
+              </object>
+              <figcaption>DSen2-CR paper (cloud.pdf) describing the residual network, SAR fusion, and cloud-adaptive loss.</figcaption>
+            </figure>
+          </div>
         </section>
       </div>
     </main>
