fix the git logo

--- a/week3.html
+++ b/week3.html
@@ -173,7 +173,12 @@
                   the globally-sampled training strategy described in the paper.
                 </p>
               </div>
-              <a class="ghost-button" href="https://github.com/ameraner/dsen2-cr" target="_blank" rel="noopener">Visit Repository</a>
+              <a class="ghost-button repo-card-link" href="https://github.com/ameraner/dsen2-cr" target="_blank" rel="noopener">
+                <svg aria-hidden="true" focusable="false" viewBox="0 0 24 24">
+                  <path fill="currentColor" d="M12 .297a12 12 0 00-3.793 23.4c.6.111.82-.26.82-.578 0-.285-.01-1.04-.015-2.04-3.338.726-4.042-1.61-4.042-1.61-.546-1.385-1.333-1.755-1.333-1.755-1.09-.745.083-.73.083-.73 1.205.085 1.84 1.237 1.84 1.237 1.07 1.834 2.809 1.304 3.495.997.108-.776.418-1.304.76-1.604-2.665-.304-5.466-1.332-5.466-5.93 0-1.31.467-2.38 1.235-3.22-.123-.303-.535-1.528.117-3.18 0 0 1.007-.323 3.3 1.23a11.5 11.5 0 016 0c2.29-1.553 3.296-1.23 3.296-1.23.654 1.653.243 2.878.12 3.18.77.84 1.232 1.91 1.232 3.22 0 4.61-2.804 5.624-5.475 5.92.43.372.814 1.103.814 2.222 0 1.605-.015 2.896-.015 3.293 0 .32.216.694.825.576A12 12 0 0012 .297"/>
+                </svg>
+                Visit Repository
+              </a>
             </div>
             <ul class="detail-list" style="margin-top: 1.5rem;">
               <li>Optical imagery is foundational across EO applications, yet consistent realizations are blocked by cloud cover.</li>
